main-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: main
  name: hashgenerator-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hashgenerator
  template:
    metadata:
      labels:
        app: hashgenerator
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: generator
          image: kekalainen/uh-devops-with-kubernetes:1.10-generator
          resources:
            requests:
              cpu: "1m"
              memory: "20Mi"
            limits:
              cpu: "10m"
              memory: "40Mi"
          volumeMounts:
            - name: data-volume
              mountPath: /usr/src/app/data
        - name: server
          image: kekalainen/uh-devops-with-kubernetes:4.01-server
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "75m"
              memory: "40Mi"
            limits:
              cpu: "325m"
              memory: "80Mi"
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 10
            httpGet:
               path: /healthz
               port: 8080
          volumeMounts:
            - name: data-volume
              mountPath: /usr/src/app/data
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: hashgenerator-persistent-volume-claim
