main-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: main
  name: hashgenerator-service
spec:
  type: ClusterIP
  selector:
    app: hashgenerator
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
